--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "homepage": "https://b0ndurant.github.io/React-Movies/",
   "name": "react-movies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "mdbreact": "^4.14.0",
     "moment": "^2.24.0",
     "rc-pagination": "^1.18.0",
@@ -21,9 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
