--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
+    "react-transition-group": "^4.0.1",
     "react-youtube": "^7.9.0"
   },
   "scripts": {
